	* configs/pic32-startkit/nsh:  Completed verification of the PIC32 Ethernet
	  Starter Kit port.  Added and verified the NuttShell (NSH) on the PIC32
	  Ethernet Starter Kit.  I can now (finally) claim to have complete the
	  basic port to this board.
	* configs/pic32-startkit/nsh/up_usbdev, up_nsh.c, and up_usbterm.c:  Verified
	  the USB (device) driver on the PIC32 Ethernet Starter Kit.
	* arch/mips/src/pic32mx/pic32mx_ethernet.c:  Verified the PIC32 Ethernet
	  driver on the PIC32 Starter Kit.  Status:  It is occasionally functional
	  but not stable enough for use.
	* arch/arm/include/stm32, arch/arm/src/stm32:  Add general support for
	  the STM32 F2 family. Contributed by Gary Teravskis,
	* configs/stm3220g-eval:  Add support for the STMicro STM3220G-EVAL board.
	  Contributed by Gary Teravskis,
 
6.17 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* configs/sure-pic32mx: Add support for the Sure DB-DP11212 PIC32 General
	  Purpose Demo Board
	* arch/arm/src/stm32/stm32_usbhost.c/.h:  Add files that will (eventually)
	  hold an STM32 USB host driver (the initial check-in is the NuttX LPC17
	  USB host driver with name changes only).
	* arch/arm/src/stm32/chip/stm32_otgfs.h:  STM32 USB OTG FS register
	  definitions (not complete on initial check-in).
	* net/connect.c:  Add another low level, thread-independent socket interface
	  for use within the OS.
	* arch/mips/src/pic32mx/pic32mx_ethernet.c:  The PIC32 Ethernet driver
	  is now stable on the PIC32 Starter Kit.
	* configs/pic32-starterkit/nsh2:  Add a PIC32 Ethernet Starter Kit NSH
	  configuration that has no serial console; all interaction is done via
	  Telnet.
	* net/netdev_sem.c:  Correct a deadlock condition by making a seamphore
	  recursive.  To my knowledge this deadlock only occurs when running the
	  NSH command ifconfig over Telnet.  In that case the function netdev_foreach
	  takes the network device semaphore, but so does the telnet logic causing
	  the deadlock.